src/parser/snapshots/coconut__parser__expression__tests__call_expr-5.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"foo.bar(baz, 1, 2, 3)\".into()).unwrap().1"
---
{
  "type": "CallExpression",
  "callee": {
    "type": "MemberExpression",
    "object": {
      "type": "Identifier",
      "name": "foo",
      "start": 0,
      "end": 3
    },
    "property": {
      "type": "Identifier",
      "name": "bar",
      "start": 4,
      "end": 7
    },
    "computed": false,
    "start": 0,
    "end": 7
  },
  "arguments": [
    {
      "type": "Identifier",
      "name": "baz",
      "start": 8,
      "end": 11
    },
    {
      "type": "Literal",
      "value": 1.0,
      "start": 13,
      "end": 14
    },
    {
      "type": "Literal",
      "value": 2.0,
      "start": 16,
      "end": 17
    },
    {
      "type": "Literal",
      "value": 3.0,
      "start": 19,
      "end": 20
    }
  ],
  "start": 0,
  "end": 21
}
