src/parser/snapshots/coconut__parser__expression__tests__expr_bp_assignment-22.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"x[\\\"foo\\\"] = a\".into()).unwrap().1"
---
{
  "type": "AssignmentExpression",
  "operator": "=",
  "left": {
    "type": "MemberExpression",
    "object": {
      "type": "Identifier",
      "name": "x",
      "start": 0,
      "end": 1
    },
    "property": {
      "type": "Literal",
      "value": "foo",
      "start": 2,
      "end": 7
    },
    "computed": true,
    "start": 0,
    "end": 8
  },
  "right": {
    "type": "Identifier",
    "name": "a",
    "start": 11,
    "end": 12
  },
  "start": 0,
  "end": 12
}
