src/parser/snapshots/coconut__parser__expression__tests__expr_bp_prefix-4.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"1 + -2\".into()).unwrap().1"
---
{
  "type": "BinaryExpression",
  "operator": "+",
  "left": {
    "type": "Literal",
    "value": 1.0,
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "UnaryExpression",
    "operator": "-",
    "prefix": true,
    "argument": {
      "type": "Literal",
      "value": 2.0,
      "start": 5,
      "end": 6
    },
    "start": 4,
    "end": 6
  },
  "start": 0,
  "end": 6
}
