src/parser/snapshots/coconut__parser__expression__tests__new_expr-6.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"new Foo.Bar(true)\".into()).unwrap().1"
---
{
  "type": "NewExpression",
  "callee": {
    "type": "MemberExpression",
    "object": {
      "type": "Identifier",
      "name": "Foo",
      "start": 4,
      "end": 7
    },
    "property": {
      "type": "Identifier",
      "name": "Bar",
      "start": 8,
      "end": 11
    },
    "computed": false,
    "start": 4,
    "end": 11
  },
  "arguments": [
    {
      "type": "Literal",
      "value": true,
      "start": 12,
      "end": 16
    }
  ],
  "start": 0,
  "end": 17
}
